parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    IF
    LBRACKET
    NEW
    PERIOD
    RBRACKET
    RETURN
    SUPER
    THIS
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> func_def program
Rule 2     program -> class_def program
Rule 3     program -> empty
Rule 4     empty -> <empty>
Rule 5     func_def -> func_header func_body
Rule 6     func_header -> var_type ID LPAREN param_list RPAREN
Rule 7     func_body -> LBRACE statement RBRACE
Rule 8     param_list -> VOID
Rule 9     param_list -> func_param
Rule 10    func_param_def -> var_type ID
Rule 11    func_param -> func_param_def next_param
Rule 12    next_param -> COMMA func_param_def
Rule 13    next_param -> empty
Rule 14    class_def -> CLASS ID COLON ID class_body
Rule 15    class_body -> LBRACE class_members RBRACE
Rule 16    class_members -> field_def
Rule 17    class_members -> func_def
Rule 18    field_def -> var_type ID multiple_field_def
Rule 19    multiple_field_def -> SEMI
Rule 20    multiple_field_def -> COLON ID multiple_field_def
Rule 21    var_type -> INT
Rule 22    var_type -> STRING
Rule 23    var_type -> VOID
Rule 24    var_type -> ID
Rule 25    statement -> var_def statement
Rule 26    statement -> var_assignment statement
Rule 27    statement -> expr SEMI
Rule 28    statement -> empty
Rule 29    var_assignment -> ID EQUALS expr SEMI
Rule 30    var_def -> var_type ID multiple_var_def
Rule 31    multiple_var_def -> SEMI
Rule 32    multiple_var_def -> COMMA ID multiple_var_def
Rule 33    expr -> ID
Rule 34    expr -> INT_CONST
Rule 35    expr -> STRING_CONST
Rule 36    expr -> LPAREN expr RPAREN
Rule 37    expr -> expr PLUS expr
Rule 38    expr -> expr MINUS expr
Rule 39    expr -> expr TIMES expr
Rule 40    expr -> expr DIVIDE expr
Rule 41    expr -> LNOT expr
Rule 42    expr -> expr LOR expr
Rule 43    expr -> expr LAND expr
Rule 44    expr -> expr LT expr
Rule 45    expr -> expr LE expr
Rule 46    expr -> expr GE expr
Rule 47    expr -> expr GT expr
Rule 48    expr -> expr EQ expr
Rule 49    expr -> expr NE expr

Terminals, with rules where they appear

CLASS                : 14
COLON                : 14 20
COMMA                : 12 32
DIVIDE               : 40
ELSE                 : 
EQ                   : 48
EQUALS               : 29
GE                   : 46
GT                   : 47
ID                   : 6 10 14 14 18 20 24 29 30 32 33
IF                   : 
INT                  : 21
INT_CONST            : 34
LAND                 : 43
LBRACE               : 7 15
LBRACKET             : 
LE                   : 45
LNOT                 : 41
LOR                  : 42
LPAREN               : 6 36
LT                   : 44
MINUS                : 38
NE                   : 49
NEW                  : 
PERIOD               : 
PLUS                 : 37
RBRACE               : 7 15
RBRACKET             : 
RETURN               : 
RPAREN               : 6 36
SEMI                 : 19 27 29 31
STRING               : 22
STRING_CONST         : 35
SUPER                : 
THIS                 : 
TIMES                : 39
VOID                 : 8 23
WHILE                : 
error                : 

Nonterminals, with rules where they appear

class_body           : 14
class_def            : 2
class_members        : 15
empty                : 3 13 28
expr                 : 27 29 36 37 37 38 38 39 39 40 40 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49
field_def            : 16
func_body            : 5
func_def             : 1 17
func_header          : 5
func_param           : 9
func_param_def       : 11 12
multiple_field_def   : 18 20
multiple_var_def     : 30 32
next_param           : 11
param_list           : 6
program              : 1 2 0
statement            : 7 25 26
var_assignment       : 26
var_def              : 25
var_type             : 6 10 18 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . func_def program
    (2) program -> . class_def program
    (3) program -> . empty
    (5) func_def -> . func_header func_body
    (14) class_def -> . CLASS ID COLON ID class_body
    (4) empty -> .
    (6) func_header -> . var_type ID LPAREN param_list RPAREN
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    CLASS           shift and go to state 6
    $end            reduce using rule 4 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    VOID            shift and go to state 11
    ID              shift and go to state 7

    program                        shift and go to state 1
    func_def                       shift and go to state 2
    class_def                      shift and go to state 3
    empty                          shift and go to state 4
    func_header                    shift and go to state 5
    var_type                       shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> func_def . program
    (1) program -> . func_def program
    (2) program -> . class_def program
    (3) program -> . empty
    (5) func_def -> . func_header func_body
    (14) class_def -> . CLASS ID COLON ID class_body
    (4) empty -> .
    (6) func_header -> . var_type ID LPAREN param_list RPAREN
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    CLASS           shift and go to state 6
    $end            reduce using rule 4 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    VOID            shift and go to state 11
    ID              shift and go to state 7

    func_def                       shift and go to state 2
    program                        shift and go to state 12
    class_def                      shift and go to state 3
    empty                          shift and go to state 4
    func_header                    shift and go to state 5
    var_type                       shift and go to state 8

state 3

    (2) program -> class_def . program
    (1) program -> . func_def program
    (2) program -> . class_def program
    (3) program -> . empty
    (5) func_def -> . func_header func_body
    (14) class_def -> . CLASS ID COLON ID class_body
    (4) empty -> .
    (6) func_header -> . var_type ID LPAREN param_list RPAREN
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    CLASS           shift and go to state 6
    $end            reduce using rule 4 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    VOID            shift and go to state 11
    ID              shift and go to state 7

    class_def                      shift and go to state 3
    program                        shift and go to state 13
    func_def                       shift and go to state 2
    empty                          shift and go to state 4
    func_header                    shift and go to state 5
    var_type                       shift and go to state 8

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (5) func_def -> func_header . func_body
    (7) func_body -> . LBRACE statement RBRACE

    LBRACE          shift and go to state 15

    func_body                      shift and go to state 14

state 6

    (14) class_def -> CLASS . ID COLON ID class_body

    ID              shift and go to state 16


state 7

    (24) var_type -> ID .

    ID              reduce using rule 24 (var_type -> ID .)


state 8

    (6) func_header -> var_type . ID LPAREN param_list RPAREN

    ID              shift and go to state 17


state 9

    (21) var_type -> INT .

    ID              reduce using rule 21 (var_type -> INT .)


state 10

    (22) var_type -> STRING .

    ID              reduce using rule 22 (var_type -> STRING .)


state 11

    (23) var_type -> VOID .

    ID              reduce using rule 23 (var_type -> VOID .)


state 12

    (1) program -> func_def program .

    $end            reduce using rule 1 (program -> func_def program .)


state 13

    (2) program -> class_def program .

    $end            reduce using rule 2 (program -> class_def program .)


state 14

    (5) func_def -> func_header func_body .

    CLASS           reduce using rule 5 (func_def -> func_header func_body .)
    INT             reduce using rule 5 (func_def -> func_header func_body .)
    STRING          reduce using rule 5 (func_def -> func_header func_body .)
    VOID            reduce using rule 5 (func_def -> func_header func_body .)
    ID              reduce using rule 5 (func_def -> func_header func_body .)
    $end            reduce using rule 5 (func_def -> func_header func_body .)
    RBRACE          reduce using rule 5 (func_def -> func_header func_body .)


state 15

    (7) func_body -> LBRACE . statement RBRACE
    (25) statement -> . var_def statement
    (26) statement -> . var_assignment statement
    (27) statement -> . expr SEMI
    (28) statement -> . empty
    (30) var_def -> . var_type ID multiple_var_def
    (29) var_assignment -> . ID EQUALS expr SEMI
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr
    (4) empty -> .
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    ID              shift and go to state 24
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28
    RBRACE          reduce using rule 4 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    VOID            shift and go to state 11

    statement                      shift and go to state 18
    var_def                        shift and go to state 19
    var_assignment                 shift and go to state 20
    expr                           shift and go to state 21
    empty                          shift and go to state 22
    var_type                       shift and go to state 23

state 16

    (14) class_def -> CLASS ID . COLON ID class_body

    COLON           shift and go to state 29


state 17

    (6) func_header -> var_type ID . LPAREN param_list RPAREN

    LPAREN          shift and go to state 30


state 18

    (7) func_body -> LBRACE statement . RBRACE

    RBRACE          shift and go to state 31


state 19

    (25) statement -> var_def . statement
    (25) statement -> . var_def statement
    (26) statement -> . var_assignment statement
    (27) statement -> . expr SEMI
    (28) statement -> . empty
    (30) var_def -> . var_type ID multiple_var_def
    (29) var_assignment -> . ID EQUALS expr SEMI
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr
    (4) empty -> .
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    ID              shift and go to state 24
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28
    RBRACE          reduce using rule 4 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    VOID            shift and go to state 11

    var_def                        shift and go to state 19
    statement                      shift and go to state 32
    var_assignment                 shift and go to state 20
    expr                           shift and go to state 21
    empty                          shift and go to state 22
    var_type                       shift and go to state 23

state 20

    (26) statement -> var_assignment . statement
    (25) statement -> . var_def statement
    (26) statement -> . var_assignment statement
    (27) statement -> . expr SEMI
    (28) statement -> . empty
    (30) var_def -> . var_type ID multiple_var_def
    (29) var_assignment -> . ID EQUALS expr SEMI
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr
    (4) empty -> .
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    ID              shift and go to state 24
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28
    RBRACE          reduce using rule 4 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    VOID            shift and go to state 11

    var_assignment                 shift and go to state 20
    statement                      shift and go to state 33
    var_def                        shift and go to state 19
    expr                           shift and go to state 21
    empty                          shift and go to state 22
    var_type                       shift and go to state 23

state 21

    (27) statement -> expr . SEMI
    (37) expr -> expr . PLUS expr
    (38) expr -> expr . MINUS expr
    (39) expr -> expr . TIMES expr
    (40) expr -> expr . DIVIDE expr
    (42) expr -> expr . LOR expr
    (43) expr -> expr . LAND expr
    (44) expr -> expr . LT expr
    (45) expr -> expr . LE expr
    (46) expr -> expr . GE expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . EQ expr
    (49) expr -> expr . NE expr

    SEMI            shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    LOR             shift and go to state 39
    LAND            shift and go to state 40
    LT              shift and go to state 41
    LE              shift and go to state 42
    GE              shift and go to state 43
    GT              shift and go to state 44
    EQ              shift and go to state 45
    NE              shift and go to state 46


state 22

    (28) statement -> empty .

    RBRACE          reduce using rule 28 (statement -> empty .)


state 23

    (30) var_def -> var_type . ID multiple_var_def

    ID              shift and go to state 47


state 24

    (29) var_assignment -> ID . EQUALS expr SEMI
    (33) expr -> ID .
    (24) var_type -> ID .

    EQUALS          shift and go to state 48
    SEMI            reduce using rule 33 (expr -> ID .)
    PLUS            reduce using rule 33 (expr -> ID .)
    MINUS           reduce using rule 33 (expr -> ID .)
    TIMES           reduce using rule 33 (expr -> ID .)
    DIVIDE          reduce using rule 33 (expr -> ID .)
    LOR             reduce using rule 33 (expr -> ID .)
    LAND            reduce using rule 33 (expr -> ID .)
    LT              reduce using rule 33 (expr -> ID .)
    LE              reduce using rule 33 (expr -> ID .)
    GE              reduce using rule 33 (expr -> ID .)
    GT              reduce using rule 33 (expr -> ID .)
    EQ              reduce using rule 33 (expr -> ID .)
    NE              reduce using rule 33 (expr -> ID .)
    ID              reduce using rule 24 (var_type -> ID .)


state 25

    (34) expr -> INT_CONST .

    SEMI            reduce using rule 34 (expr -> INT_CONST .)
    PLUS            reduce using rule 34 (expr -> INT_CONST .)
    MINUS           reduce using rule 34 (expr -> INT_CONST .)
    TIMES           reduce using rule 34 (expr -> INT_CONST .)
    DIVIDE          reduce using rule 34 (expr -> INT_CONST .)
    LOR             reduce using rule 34 (expr -> INT_CONST .)
    LAND            reduce using rule 34 (expr -> INT_CONST .)
    LT              reduce using rule 34 (expr -> INT_CONST .)
    LE              reduce using rule 34 (expr -> INT_CONST .)
    GE              reduce using rule 34 (expr -> INT_CONST .)
    GT              reduce using rule 34 (expr -> INT_CONST .)
    EQ              reduce using rule 34 (expr -> INT_CONST .)
    NE              reduce using rule 34 (expr -> INT_CONST .)
    RPAREN          reduce using rule 34 (expr -> INT_CONST .)


state 26

    (35) expr -> STRING_CONST .

    SEMI            reduce using rule 35 (expr -> STRING_CONST .)
    PLUS            reduce using rule 35 (expr -> STRING_CONST .)
    MINUS           reduce using rule 35 (expr -> STRING_CONST .)
    TIMES           reduce using rule 35 (expr -> STRING_CONST .)
    DIVIDE          reduce using rule 35 (expr -> STRING_CONST .)
    LOR             reduce using rule 35 (expr -> STRING_CONST .)
    LAND            reduce using rule 35 (expr -> STRING_CONST .)
    LT              reduce using rule 35 (expr -> STRING_CONST .)
    LE              reduce using rule 35 (expr -> STRING_CONST .)
    GE              reduce using rule 35 (expr -> STRING_CONST .)
    GT              reduce using rule 35 (expr -> STRING_CONST .)
    EQ              reduce using rule 35 (expr -> STRING_CONST .)
    NE              reduce using rule 35 (expr -> STRING_CONST .)
    RPAREN          reduce using rule 35 (expr -> STRING_CONST .)


state 27

    (36) expr -> LPAREN . expr RPAREN
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 49

state 28

    (41) expr -> LNOT . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 51

state 29

    (14) class_def -> CLASS ID COLON . ID class_body

    ID              shift and go to state 52


state 30

    (6) func_header -> var_type ID LPAREN . param_list RPAREN
    (8) param_list -> . VOID
    (9) param_list -> . func_param
    (11) func_param -> . func_param_def next_param
    (10) func_param_def -> . var_type ID
    (21) var_type -> . INT
    (22) var_type -> . STRING
    (23) var_type -> . VOID
    (24) var_type -> . ID

    VOID            shift and go to state 55
    INT             shift and go to state 9
    STRING          shift and go to state 10
    ID              shift and go to state 7

    var_type                       shift and go to state 53
    param_list                     shift and go to state 54
    func_param                     shift and go to state 56
    func_param_def                 shift and go to state 57

state 31

    (7) func_body -> LBRACE statement RBRACE .

    CLASS           reduce using rule 7 (func_body -> LBRACE statement RBRACE .)
    INT             reduce using rule 7 (func_body -> LBRACE statement RBRACE .)
    STRING          reduce using rule 7 (func_body -> LBRACE statement RBRACE .)
    VOID            reduce using rule 7 (func_body -> LBRACE statement RBRACE .)
    ID              reduce using rule 7 (func_body -> LBRACE statement RBRACE .)
    $end            reduce using rule 7 (func_body -> LBRACE statement RBRACE .)
    RBRACE          reduce using rule 7 (func_body -> LBRACE statement RBRACE .)


state 32

    (25) statement -> var_def statement .

    RBRACE          reduce using rule 25 (statement -> var_def statement .)


state 33

    (26) statement -> var_assignment statement .

    RBRACE          reduce using rule 26 (statement -> var_assignment statement .)


state 34

    (27) statement -> expr SEMI .

    RBRACE          reduce using rule 27 (statement -> expr SEMI .)


state 35

    (37) expr -> expr PLUS . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 58

state 36

    (38) expr -> expr MINUS . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 59

state 37

    (39) expr -> expr TIMES . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 60

state 38

    (40) expr -> expr DIVIDE . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 61

state 39

    (42) expr -> expr LOR . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 62

state 40

    (43) expr -> expr LAND . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 63

state 41

    (44) expr -> expr LT . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 64

state 42

    (45) expr -> expr LE . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 65

state 43

    (46) expr -> expr GE . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 66

state 44

    (47) expr -> expr GT . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 67

state 45

    (48) expr -> expr EQ . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 68

state 46

    (49) expr -> expr NE . expr
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 69

state 47

    (30) var_def -> var_type ID . multiple_var_def
    (31) multiple_var_def -> . SEMI
    (32) multiple_var_def -> . COMMA ID multiple_var_def

    SEMI            shift and go to state 71
    COMMA           shift and go to state 72

    multiple_var_def               shift and go to state 70

state 48

    (29) var_assignment -> ID EQUALS . expr SEMI
    (33) expr -> . ID
    (34) expr -> . INT_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . LPAREN expr RPAREN
    (37) expr -> . expr PLUS expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr TIMES expr
    (40) expr -> . expr DIVIDE expr
    (41) expr -> . LNOT expr
    (42) expr -> . expr LOR expr
    (43) expr -> . expr LAND expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr EQ expr
    (49) expr -> . expr NE expr

    ID              shift and go to state 50
    INT_CONST       shift and go to state 25
    STRING_CONST    shift and go to state 26
    LPAREN          shift and go to state 27
    LNOT            shift and go to state 28

    expr                           shift and go to state 73

state 49
